Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -27,10 +27,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "import numpy as np"
+   ]
   },
   {
    "cell_type": "code",
@@ -38,7 +40,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "A = r"
+    "A = np.random.rand()"
    ]
   },
   {
