Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -40,7 +40,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "A = np.random.rand()"
+    "A = np.random.rand(3,2)\n",
+    "B = n"
    ]
   },
   {
