Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -41,7 +41,9 @@
    "outputs": [],
    "source": [
     "A = np.random.rand(3,2)\n",
-    "B = np.random.rand(2,3)"
+    "B = np.random.rand(2,3)\n",
+    "C = np.random.rand(2,3)\n",
+    "\n"
    ]
   },
   {
