--- a/index.ipynb
+++ b/index.ipynb
@@ -43,7 +43,8 @@
     "A = np.random.rand(3,2)\n",
     "B = np.random.rand(2,3)\n",
     "C = np.random.rand(2,3)\n",
-    "\n"
+    "\n",
+    "np.dot(A,(B+C)) == ()"
    ]
   },
   {
