Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -36,15 +36,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[False,  True,  True],\n",
+       "       [ True, False, False],\n",
+       "       [ True,  True,  True]])"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "A = np.random.rand(3,2)\n",
     "B = np.random.rand(2,3)\n",
     "C = np.random.rand(2,3)\n",
     "\n",
-    "np.dot(A,(B+C)) == ()"
+    "np.dot(A,(B+C)) == np.dot(A,B)+np.dot(A,C)"
    ]
   },
   {
