Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -57,7 +57,9 @@
     "B = np.random.rand(2,3)\n",
     "C = np.random.rand(2,3)\n",
     "\n",
-    "np.dot(A,(B+C)) == np.dot(A,B)+np.dot(A,C)"
+    "print(A)\n",
+    "print(np.dot(A,(B+C)))\n",
+    "np.dot(A,B)+np.dot(A,C)"
    ]
   },
   {
