Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -36,20 +36,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "array([[False,  True,  True],\n",
-       "       [ True, False, False],\n",
-       "       [ True,  True,  True]])"
-      ]
-     },
-     "execution_count": 2,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[0.93803194 0.00281178]\n",
+      " [0.58909377 0.54309888]\n",
+      " [0.82636631 0.1009761 ]]\n",
+      "[[0.02472076 0.84973601 0.84299488]\n",
+      " [0.58360429 0.72820158 0.80242026]]\n",
+      "[[0.25709942 0.39423306 0.50102615]\n",
+      " [0.62951952 0.75149055 0.06974811]]\n",
+      "[[0.26776735 1.17104328 1.263187  ]\n",
+      " [0.82486469 1.53643357 1.26542809]\n",
+      " [0.35538321 1.17738767 1.19872186]]\n",
+      "[[0.26776735 1.17104328 1.263187  ]\n",
+      " [0.82486469 1.53643357 1.26542809]\n",
+      " [0.35538321 1.17738767 1.19872186]]\n"
+     ]
     }
    ],
    "source": [
@@ -58,8 +65,10 @@
     "C = np.random.rand(2,3)\n",
     "\n",
     "print(A)\n",
+    "print(B)\n",
+    "print(C)\n",
     "print(np.dot(A,(B+C)))\n",
-    "np.dot(A,B)+np.dot(A,C)"
+    "print(np.dot(A,B)+np.dot(A,C))"
    ]
   },
   {
