--- a/index.ipynb
+++ b/index.ipynb
@@ -36,24 +36,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
-     "ename": "ValueError",
-     "evalue": "Range cannot be empty (low >= high) unless no samples are taken",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m\u001b[0m",
-      "\u001b[0;31mValueError\u001b[0mTraceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-4-ab2ca3c62408>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mrandom\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mrandint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m3\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;36m3\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;32mmtrand.pyx\u001b[0m in \u001b[0;36mmtrand.RandomState.randint\u001b[0;34m()\u001b[0m\n",
-      "\u001b[0;31mValueError\u001b[0m: Range cannot be empty (low >= high) unless no samples are taken"
-     ]
+     "data": {
+      "text/plain": [
+       "array([[4, 2, 2],\n",
+       "       [1, 1, 4],\n",
+       "       [1, 0, 4]])"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "np.random.randint(size=(3,3))"
+    "np.random.randint(5,size=(3,3))"
    ]
   },
   {
@@ -82,7 +82,7 @@
     }
    ],
    "source": [
-    "A = np.random.rand(3,2)\n",
+    "A = np.random.randint(5,size=(3,3))\n",
     "B = np.random.rand(2,3)\n",
     "C = np.random.rand(2,3)\n",
     "\n",
