--- a/index.ipynb
+++ b/index.ipynb
@@ -58,33 +58,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[0.93803194 0.00281178]\n",
-      " [0.58909377 0.54309888]\n",
-      " [0.82636631 0.1009761 ]]\n",
-      "[[0.02472076 0.84973601 0.84299488]\n",
-      " [0.58360429 0.72820158 0.80242026]]\n",
-      "[[0.25709942 0.39423306 0.50102615]\n",
-      " [0.62951952 0.75149055 0.06974811]]\n",
-      "[[0.26776735 1.17104328 1.263187  ]\n",
-      " [0.82486469 1.53643357 1.26542809]\n",
-      " [0.35538321 1.17738767 1.19872186]]\n",
-      "[[0.26776735 1.17104328 1.263187  ]\n",
-      " [0.82486469 1.53643357 1.26542809]\n",
-      " [0.35538321 1.17738767 1.19872186]]\n"
+      "[[0 1]\n",
+      " [1 4]\n",
+      " [0 2]]\n",
+      "[[0 1 2]\n",
+      " [3 0 2]]\n",
+      "[[1 0 3]\n",
+      " [1 3 3]]\n",
+      "[[ 4  3  5]\n",
+      " [17 13 25]\n",
+      " [ 8  6 10]]\n",
+      "[[ 4  3  5]\n",
+      " [17 13 25]\n",
+      " [ 8  6 10]]\n"
      ]
     }
    ],
    "source": [
-    "A = np.random.randint(5,size=(3,3))\n",
-    "B = np.random.rand(2,3)\n",
-    "C = np.random.rand(2,3)\n",
+    "A = np.random.randint(5,size=(3,2))\n",
+    "B = np.random.randint(5,size=(2,3))\n",
+    "C = np.random.randint(5,size=(2,3))\n",
     "\n",
     "print(A)\n",
     "print(B)\n",
