Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -90,7 +90,8 @@
     "print(B)\n",
     "print(C)\n",
     "print(np.dot(A,(B+C)))\n",
-    "print(np.dot(A,B)+np.dot(A,C))"
+    "print(np.dot(A,B)+np.dot(A,C))\n",
+    "np.dot(A,(B+C)) == "
    ]
   },
   {
