--- a/index.ipynb
+++ b/index.ipynb
@@ -58,26 +58,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[0 1]\n",
-      " [1 4]\n",
-      " [0 2]]\n",
-      "[[0 1 2]\n",
-      " [3 0 2]]\n",
-      "[[1 0 3]\n",
-      " [1 3 3]]\n",
-      "[[ 4  3  5]\n",
-      " [17 13 25]\n",
-      " [ 8  6 10]]\n",
-      "[[ 4  3  5]\n",
-      " [17 13 25]\n",
-      " [ 8  6 10]]\n"
+      "[[4 0]\n",
+      " [3 3]\n",
+      " [2 0]]\n",
+      "[[0 2 1]\n",
+      " [3 0 4]]\n",
+      "[[2 0 4]\n",
+      " [0 0 2]]\n",
+      "[[ 8  8 20]\n",
+      " [15  6 33]\n",
+      " [ 4  4 10]]\n",
+      "[[ 8  8 20]\n",
+      " [15  6 33]\n",
+      " [ 4  4 10]]\n",
+      "[[ True  True  True]\n",
+      " [ True  True  True]\n",
+      " [ True  True  True]]\n"
      ]
     }
    ],
@@ -91,7 +94,7 @@
     "print(C)\n",
     "print(np.dot(A,(B+C)))\n",
     "print(np.dot(A,B)+np.dot(A,C))\n",
-    "np.dot(A,(B+C)) == "
+    "print(np.dot(A,(B+C)) == np.dot(A,B)+np.dot(A,C))"
    ]
   },
   {
