Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -98,15 +98,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Your code here"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -120,7 +111,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Your code here "
+    "A = np.random.randint(5,size=(3,2))\n",
+    "B = np.random.randint(5,size=(2,3))\n",
+    "C = np.random.randint(5,size=(2,3))\n",
+    "\n",
+    "print(A)\n",
+    "print(B)\n",
+    "print(C)\n",
+    "print(np.dot(A,(B+C)))\n",
+    "print(np.dot(A,B)+np.dot(A,C))\n",
+    "print(np.dot(A,(B+C)) == np.dot(A,B)+np.dot(A,C))"
    ]
   },
   {
