Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -118,7 +118,7 @@
     "print(A)\n",
     "print(B)\n",
     "print(C)\n",
-    "print(np.dot(A,(B+C)))\n",
+    "print(np.dot(A,np.dot(B,C))\n",
     "print(np.dot(A,B)+np.dot(A,C))\n",
     "print(np.dot(A,(B+C)) == np.dot(A,B)+np.dot(A,C))"
    ]
