Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -119,7 +119,7 @@
     "print(B)\n",
     "print(C)\n",
     "print(np.dot(A,np.dot(B,C))\n",
-    "print(np.dot(A, B)\n",
+    "print(np.dot(np.dot(A, B),C)\n",
     "print(np.dot(A,(B+C)) == np.dot(A,B)+np.dot(A,C))"
    ]
   },
