Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -120,7 +120,7 @@
     "print(C)\n",
     "print(np.dot(A,np.dot(B,C))\n",
     "print(np.dot(np.dot(A, B),C)\n",
-    "print(np.dot(A,(B+C)) == np.dot(A,B)+np.dot(A,C))"
+    "print(np.dot(A,np.dot(B,C) == np.dot(A,B)+np.dot(A,C))"
    ]
   },
   {
