Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -162,7 +162,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "np.dot(A,B)\n"
+    "print(np.dot(A,B))\n",
+    "printnp.dot(B,A)"
    ]
   },
   {
