Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -158,12 +158,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[17 10 21]\n",
+      " [16 22 17]\n",
+      " [10 15 13]]\n",
+      "[[16 19 10]\n",
+      " [ 6 23 15]\n",
+      " [19 21 13]]\n"
+     ]
+    }
+   ],
    "source": [
     "print(np.dot(A,B))\n",
-    "printnp.dot(B,A)"
+    "print(np.dot(B,A))"
    ]
   },
   {
