--- a/index.ipynb
+++ b/index.ipynb
@@ -194,7 +194,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "x = np.rand"
+    "x = np.random.randint(5, size=())"
    ]
   },
   {
