Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -194,7 +194,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "x = np.random.randint(5, size=())"
+    "x = np.random.randint(5, size=(3,1))\n",
+    "x = np.random.randint(5, size=(3,1))"
    ]
   },
   {
