Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -190,12 +190,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[ True]])"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "x = np.random.randint(5, size=(3,1))\n",
-    "x = np.random.randint(5, size=(3,1))"
+    "y = np.random.randint(5, size=(3,1))\n",
+    "np.dot(x.T,y) == np.dot(y.T,x)"
    ]
   },
   {
