Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -224,7 +224,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Your code here "
+    "(np.dot(A,B)).T == np.dot(A.T, B.T)"
    ]
   },
   {
