Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -220,9 +220,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
+   "source": [
+    "print(A)\n",
+    "p"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[False, False, False],\n",
+       "       [False, False, False],\n",
+       "       [False, False,  True]])"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "(np.dot(A,B)).T == np.dot(A.T, B.T)"
    ]
