Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -220,12 +220,47 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[4 1 1]\n",
+      " [0 4 3]\n",
+      " [1 3 1]]\n",
+      "[[3 1 4]\n",
+      " [1 4 2]\n",
+      " [4 2 3]]\n"
+     ]
+    }
+   ],
    "source": [
     "print(A)\n",
-    "p"
+    "print(B)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[4, 0, 1],\n",
+       "       [1, 4, 3],\n",
+       "       [1, 3, 1]])"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "A.T"
    ]
   },
   {
