Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -265,24 +265,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([[False, False, False],\n",
-       "       [False, False, False],\n",
-       "       [False, False,  True]])"
+       "array([[ True,  True,  True],\n",
+       "       [ True,  True,  True],\n",
+       "       [ True,  True,  True]])"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "(np.dot(A,B)).T == np.dot(A.T, B.T)"
+    "(np.dot(A,B)).T == np.dot(B.T, A.T)"
    ]
   },
   {
