Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -215,7 +215,7 @@
    "metadata": {},
    "source": [
     "## Simplification of the matrix product\n",
-    "### Prove that $ (A \\cdot B)^T = A^T \\cdot B^T $"
+    "### Prove that $ (A \\cdot B)^T = B^T \\cdot A^T $"
    ]
   },
   {
